RESOLVED FIXED29772
[GTK] Crash when right-clicking misspelled word
https://bugs.webkit.org/show_bug.cgi?id=29772
Summary [GTK] Crash when right-clicking misspelled word
Christian Dywan
Reported 2009-09-26 15:55:04 PDT
I discovered that WebKit doesn't ensure that the dictionaries it is trying to use exist at all. In the worst case, this results in a crash when right-clicking a misspelled word.
Attachments
Make sure dicts exist (3.58 KB, patch)
2009-09-26 15:59 PDT, Christian Dywan
gustavo: review+
gustavo: commit-queue-
Christian Dywan
Comment 1 2009-09-26 15:59:31 PDT
Created attachment 40182 [details] Make sure dicts exist With this change enchant is asked for every dictionary whether it actually exists, otherwise it is not added to the list.
David Ronis
Comment 2 2009-09-29 13:34:22 PDT
I've been experiencing a crash in liferea (https://sourceforge.net/tracker/?func=detail&atid=581684&aid=2865307&group_id=87005) which the developers think is related to this issue. I applied the patch and it still crashes. Either the patch is bad, or the issue is different. I'd appreciate your comments.
Gustavo Noronha (kov)
Comment 3 2009-10-04 03:50:06 PDT
Comment on attachment 40182 [details] Make sure dicts exist r=me, I'm setting cq-, because I assume you are going to commit yourself =).
Gustavo Noronha (kov)
Comment 4 2009-10-04 03:59:18 PDT
(In reply to comment #2) > I've been experiencing a crash in liferea > (https://sourceforge.net/tracker/?func=detail&atid=581684&aid=2865307&group_id=87005) > which the developers think is related to this issue. I applied the patch and > it still crashes. Either the patch is bad, or the issue is different. I'd > appreciate your comments. OK, so this has absolutely no relation to this problem. The dictionary the trace refers to is related to javascript properties mapping/caching, rather than to spelling. If that is webkit 1.1.15, I highly recommend upgrading to 1.1.15.1. If you can still reproduce that crash with 1.1.15.1, please file a bug report specifically for it.
Jan Alonzo
Comment 5 2009-10-12 07:20:09 PDT
(In reply to comment #3) > (From update of attachment 40182 [details]) > r=me, I'm setting cq-, because I assume you are going to commit yourself =). Landed as http://trac.webkit.org/changeset/49437. This patch also fixed a few critical warnings wrt enchant in some layout tests, which is why I landed it. I hope that's ok.
Note You need to log in before you can comment on or make changes to this bug.