2009-10-12  Christian Dywan  <christian@twotoasts.de>

Reviewed by Gustavo Noronha.

        [GTK] Crash when right-clicking misspelled word
        https://bugs.webkit.org/show_bug.cgi?id=29772

        Make sure the dictionary exist before adding it to the list of
        dictionaries.

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::EditorClient::checkSpellingOfString):
        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_set_property):

Canonical link: https://commits.webkit.org/40959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49437 268f45cc-cd09-0410-ab3c-d52691b4dbfc